Finished functions except for refereshing wehn deleting selected bug

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
             <input
               type="text"
               id="project-name"
-              value="Birthday"
+              value="Default Project"
               placeholder="Party Supplies"
             />
           </div>
@@ -28,7 +28,11 @@
             <label for="project-description"
               >Write a short description for the project</label
             >
-            <input type="text" value="Some-text" id="project-description" />
+            <input
+              type="text"
+              value="Project has no description currently"
+              id="project-description"
+            />
           </div>
           <button>Create a new Project</button>
         </header>
