Trying to fix the last bug

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <main>
       <aside>
         <div class="aside-upper">
-          <h2>My Projects</h2>
+          <h1>My Projects</h1>
         </div>
         <div class="aside-projects"></div>
       </aside>
@@ -28,11 +28,12 @@
             <label for="project-description"
               >Write a short description for the project</label
             >
-            <input
-              type="text"
+            <textarea
               value="Project has no description currently"
               id="project-description"
-            />
+              rows="4"
+            >
+            </textarea>
           </div>
           <button>Create a new Project</button>
         </header>
