Add some styling

--- a/src/template.html
+++ b/src/template.html
@@ -17,29 +17,19 @@
         <header>
           <div class="name">
             <label for="project-name">Name of the Project</label>
-            <input
-              type="text"
-              id="project-name"
-              value="Default Project"
-              placeholder="Party Supplies"
-            />
+            <input type="text" id="project-name" placeholder="Party Supplies" />
           </div>
           <div class="description">
             <label for="project-description"
               >Write a short description for the project</label
             >
-            <textarea
-              value="Project has no description currently"
-              id="project-description"
-              rows="4"
-            >
-            </textarea>
+            <textarea id="project-description" rows="4"> </textarea>
           </div>
           <button>Create a new Project</button>
         </header>
         <div class="content"><div class="cards"></div></div>
       </div>
     </main>
-    <footer>Made by Goran</footer>
+    <footer>Made by Goran Jovic</footer>
   </body>
 </html>
